fix overflow bg image

--- a/app/scss/layout/_hero.scss
+++ b/app/scss/layout/_hero.scss
@@ -16,6 +16,10 @@
     gap: rem(110);
   }
 
+  @include breakpoint-down(large) {
+    overflow-x: hidden;
+  }
+
   &__image {
     position: relative;
     display: block;
